[package]
name = "photo-analyzer-cli"
version = "0.1.0"
authors = ["Anders Bennehag <anders@bennehag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"

photo-analyzer = { "path" = "../photo-analyzer" }
