[package]
name = "photo-analyzer"
version = "0.1.0"
authors = ["Anders Bennehag <anders@bennehag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = { git = "https://github.com/LaurentMazare/tch-rs.git", rev = "be6f8a5a831fdd7f43b1c7df9a933d2da5cdf9c2" }
#tch = "0.1.7"
